# trmnl-nws-weather

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: MapClick.json  MapClick.php.xml  RUNBOOK.md
tests/: conftest.py  test_aqi.py  test_cli.py  test_config_validation.py  test_icons.py  test_nws.py  test_observation.py  test_render.py  test_service.py  test_sun.py  test_units.py  test_validate.py
trmnl_nws_weather/: __init__.py  __main__.py  aqi.py  config.py  icons.py  models.py  nws.py  render.py  service.py  sun.py  theme.py  units.py  utils.py  validate.py
trmnl_nws_weather/assets/fonts/: LICENSE.txt
