[project]
name = "trmnl-nws-weather"
version = "0.1.0"
description = "Weather display PNG generator for an OG 7.5\" TRMNL e-ink display, sourced from the NWS digital DWML API."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Jeff Thieleke", email = "github@thieleke.com" },
]
keywords = ["trmnl", "weather", "nws", "e-ink", "eink", "display", "dwml", "pillow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "Pillow~=12.2.0",
    "defusedxml~=0.7.1",
    "python-dotenv~=1.2.2",
]

[project.urls]
Homepage = "https://github.com/thieleke/trmnl-nws-weather"
Repository = "https://github.com/thieleke/trmnl-nws-weather"
Issues = "https://github.com/thieleke/trmnl-nws-weather/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
trmnl-nws-weather = "trmnl_nws_weather.__main__:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trmnl_nws_weather*"]

[tool.setuptools.package-data]
trmnl_nws_weather = ["assets/fonts/*.ttf"]
